appId: "com.i_amtheguy.potato"  # Replace with your actual app ID (package name or bundle identifier)
---
- launchApp

- tapOn: "Directions"
- tapOn:
    point: "10%,26%"
- tapOn:
    id: "SHUTTLE"